--- a/src/style.css
+++ b/src/style.css
@@ -3,6 +3,10 @@
   margin: 20px 0;
 }
 
+#terms::placeholder {
+  color: rgb(83, 83, 144);
+}
+
 .form-field {
   display: block;
   margin: 10px 0;
